# Claim-Insurance-mcp-server

./: Dockerfile  LICENSE  Makefile  README.md  env.example  pyproject.toml
.github/workflows/: ci.yml
src/claim_insurance_mcp_server/: __init__.py  http_api.py  mcp_app.py  server.py
src/claim_insurance_mcp_server/tools/: claim_tools.py  fraud_tools.py  policy_tools.py
tests/: conftest.py  test_tools.py
