[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claim-pilot-mcp-server"
version = "2026.05.1"
description = "MCP server and HTTP API for insurance tools (policy search, claim lookup, fraud scoring)"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Claim Pilot Team", email = "team@claim-pilot.com" }
]
keywords = ["insurance", "mcp", "tools", "claims", "fraud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "claim-pilot-core @ git+https://github.com/INSURANCE-AGENTS-PLATFORM/claim-pilot-core.git@master",
    "fastmcp>=3.0.0",
    "boto3>=1.35.98",
    "pydantic>=2.10.4",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "httpx>=0.28.1",
]

[project.urls]
Repository = "https://github.com/INSURANCE-AGENTS-PLATFORM/claim-pilot-mcp-server.git"
Issues = "https://github.com/INSURANCE-AGENTS-PLATFORM/claim-pilot-mcp-server/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/claim_pilot_mcp_server"]

[tool.hatch.build.targets.sdist]
include = ["src/claim_pilot_mcp_server"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
